# TinyNR

./: README.md
code/comm/infra/include/: base.h
code/comm/infra/source/: base.c
code/comm/protocol/include/gtpu/: gtpu_proc.h
code/comm/protocol/include/pdcp/: pdcp_proc.h
code/comm/protocol/include/rlc/: rlc_proc.h
code/comm/protocol/include/sdap/: sdap_proc.h
code/comm/protocol/source/gtpu/: gtpu_proc.c
code/comm/protocol/source/pdcp/: pdcp_proc.c
code/comm/protocol/source/rlc/: rlc_proc.c
code/comm/protocol/source/sdap/: sdap_proc.c
code/cu/include/entry/: cu_main.h
code/cu/include/process/data_proc/: cu_dl_data_proc.h
code/cu/include/process/msg_proc/: cu_msg_proc.h
code/cu/source/entry/: cu_main.c  nr_cu_main.c
code/cu/source/process/data_proc/: cu_dl_data_proc.c
code/cu/source/process/msg_proc/: cu_msg_proc.c
code/du/include/entry/: du_main.h
code/du/source/entry/: du_main.c
release/version/: CMakeLists.txt
